@@ -3,6 +3,7 @@
 	- Group tags on /v+/tagmod by their category
 	- Added tag visibility options by category on /v+
 	- Added filter selector to tag pages (excl. tags tab)
+	- Added new VN filters: wish/blacklist
 
 2.17 - 2011-02-04
 	- Allow moderators to overrule VN tag votes
